TEST_PROGRAMS/VALID/09/v1.go
package main

func main() {
	a := (a).test
	switch os := runtime.GOOS; os {
	case 1:
		break;
	case "linux":
	default:
		// freebsd, openbsd,
		// plan9, windows...
	}
	b := (a).test.test.test
}
