TEST_PROGRAMS/INVALID/09/assignment_mismatch_short.go
package mismatch

func main() {
    a, b := 1, 3
    a, b := 1
}
